--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "path": "/api/trading-bot",
       "schedule": "0 21 * * 5"
+    },
+    {
+      "path": "/api/trading-bot",
+      "schedule": "0 21 28-31 * *"
     }
   ]
 }
